# IOPaint-mod

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cancel-jobs.sh  commit_message.txt  config.yaml  launch.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  run.ps1  run.sh  run_tests.sh  session-ses_4288.md  session-ses_428b.md  stop.sh
.github/workflows/: ci.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
config/: secret.env.example
docs/: AGENT-TYPESCRIPT-FAILURE-RESOLVER.md  EPIC1-TOOLS-PLAN.md  EPIC3-STORAGE.md  EPIC5-JOB-RUNNER-PLAN.md  ERROR.md  FOLDER_STRUCTURE-FOR-SAVED-IMAGES.md  HLD.md  OPENAI-START.md  README.md  TERMINAL-STATUSES.md  TODO 2026-01-18 UI.md  TODO.md  images-vision.md
docs/NPM AUDIT REPORTS/: Log at 2026-01-18 9-40-47 am.txt
docs/adr/: 000-template.md  001-model-modernization.md  README.md
docs/agents/: README.md  code-style.md  terminal-statuses.md  typescript-resolver.md
docs/architecture/: model-architecture-todo.md  model-architecture.md  models.md  overview.md  ui-architecture.md
docs/epics/: README.md  template.md
docs/guides/: README.md  development.md  getting-started.md  troubleshooting.md
docs/planning/: README.md  template.md
docs/reports/: README.md
iopaint/: __init__.py  api.py  benchmark.py  cli.py  config.py  config_loader.py  const.py  download.py  helper.py  model_manager.py  schema.py
scripts/: README.md
web_app/: .eslintrc.cjs  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+198 files in other folders)
